# nsis-tauri-utils

./: .gitignore  Cargo.toml  DEPENDENTS.md  LICENSE
.cargo/: config.toml
.changes/: config.json
.github/: dependabot.yml
.github/workflows/: Rust.yml
.scripts/: package-latest-version.js
crates/nsis-fn/: Cargo.toml
crates/nsis-fn/Source/: lib.rs
crates/nsis-plugin-api/: Cargo.toml
crates/nsis-plugin-api/Source/: lib.rs
crates/nsis-process/: CHANGELOG.md  Cargo.toml  build.rs
crates/nsis-process/Source/: lib.rs
crates/nsis-semvercompare/: CHANGELOG.md  Cargo.toml
crates/nsis-semvercompare/Source/: lib.rs
crates/nsis-tauri-utils/: CHANGELOG.md  Cargo.toml  build.rs
