[profile]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link time optimizations
opt-level = "s"   # Optimize for binary size
panic = "abort"   # Strip expensive panic clean-up logic
strip = true      # Remove debug symbols

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
nsis-plugin-api = { path = "./crates/nsis-plugin-api" }

[workspace.dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
]
version = "0.59.0"

[workspace.package]
authors = ["Tauri Programme within the Commons Conservancy"]
edition = "2021"
license-file = "LICENSE"
