[dependencies]
nsis-plugin-api = { workspace = true }
windows-sys = { workspace = true }

[features]
test = [ ]

[lib]
crate-type = [ "cdylib" ]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
name = "nsis-process"
version = "0.4.2"
