[dependencies]
nsis-plugin-api = { workspace = true }
semver = { version = "1.0", default-features = false }
windows-sys = { workspace = true }

[features]
test = [ ]

[lib]
crate-type = [ "cdylib" ]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
name = "nsis-semvercompare"
version = "0.3.0"
